# Nyx_Simulink

./: .gitignore  LICENSE.md
.github/workflows/: buildLib.yml
Code/: .cproject  .project  CMakeLists.txt
Code/ADCRawToIab/: ADCRawToIab.c  ADCRawToIab.h  ADCRawToIab_private.h  ADCRawToIab_types.h
Code/CalcSpinSpeednDir/: CalcSpinSpeednDir.c  CalcSpinSpeednDir.h  CalcSpinSpeednDir_private.h  CalcSpinSpeednDir_types.h
Code/FOC/: ConstParams.c  ConstParams.h  MotorControlLib.c  MotorControlLib.h  MotorControlLibNEWFixedP_FULL19b.c  MotorControlLibNEWFixedP_FULL19b.h  MotorControlLibNEWFixedP_FULL19b_data.c  MotorControlLibNEWFixedP_FULL19b_private.h  MotorControlLibNEWFixedP_FULL19b_types.h  MotorControlLib_data.c  MotorControlLib_private.h  MotorControlLib_types.h
Code/Interface/: InterfaceBswApp.h
Code/PWMtoAngle/: ConvertPWMtoAngle.c  ConvertPWMtoAngle.h  ConvertPWMtoAngle_private.h  ConvertPWMtoAngle_types.h  PWMtoAngle_const.c  PWMtoAngle_const.h
Code/SafetyChecks/: SafetyChecks.c  SafetyChecks.h  SafetyChecks_private.h  SafetyChecks_types.h
Code/TemperatureComp/: TemperatureComp.c  TemperatureComp.h  TemperatureComp_data.c  TemperatureComp_private.h  TemperatureComp_types.h
Code/_sharedutils/: PWMtoAngle_const.h  const_params.c  div_s16s32.c  div_s16s32.h  div_s32_convergent.c  div_s32_convergent.h  div_s32_floor.c  div_s32_floor.h  look1_iflftu16Df_binlc.c  look1_iflftu16Df_binlc.h  look1_iflftu16Df_binlcm.c  look1_iflftu16Df_binlcm.h  look1_iflftu16Df_binlcmpw.c  look1_iflftu16Df_binlcmpw.h  look1_iflftu16Df_binlcpw.c  look1_iflftu16Df_binlcpw.h  look1_is16lu32n16tu16_binlcse.c  look1_is16lu32n16tu16_binlcse.h  mul_ssu32_loSR.c  mul_ssu32_loSR.h  mul_ssu32_loSR_sat.c  mul_ssu32_loSR_sat.h  mul_wide_su32.c  mul_wide_su32.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_atan2f_snf.c  rt_atan2f_snf.h  rt_atan2f_snf_cordic6.c  rt_atan2f_snf_cordic6.h  rt_defines.h  rt_modf_snf.c  rt_modf_snf.h  rt_nonfinite.c  rt_nonfinite.h  rt_zcfcn.c  rt_zcfcn.h  rtwtypes.h  (+1 more)
SimulinkModels/: ADCRawToIab.sldd  ADCRawToIab.slx  CalcSpeednDir.sldd  CalcSpinSpeednDir.slx  ConvertPWMtoAngle.slx  MotorControl.sldd  MotorControlLib.slx  PWMtoAngle.sldd  SafetyChecks.sldd  SafetyChecks.slx  bsw_Interface.sldd
SimulinkModels/Test/: IPAModell.slx  MotorControlLibSim.slx  testFrame_ADCRawToIab.slx  testFrame_AngleCalculation.slx  testFrame_CalcSpeednDir.slx  testFrame_CheckOverflowResetIntgrtOnStrtUp.slx  testFrame_PIControler.slx  testFrame_rf_sbstm_detectStartUp.slx  testFrame_rf_sbstm_disable_integrator_on_start_up.slx
SimulinkModels/Test/output_result_files_to_compare/: results_ADCRawToIab_sz1_10sec.mat  (+3 more)
SimulinkModels/referencedSubsystems/: PID_custom.slx  Speed_Calc_FastSlow.slx  detectStartUp.slx  disable_integrator_on_start_up.slx
Test/: LowPassFilterTest.slx  testFrame_ADCRawToIab.slx  testFrame_CalcSpeednDir.slx  testFrame_PositionObserever.slx
(+76 files in other folders)
